[gd_scene load_steps=4 format=3 uid="uid://x6f1l0618clp"]

[ext_resource type="Script" path="res://UI/panels/graph/GraphSettings.gd" id="1_arwtu"]
[ext_resource type="Script" path="res://UI/panels/graph/settingsfloat.gd" id="2_8a3vq"]
[ext_resource type="PackedScene" uid="uid://4qtbqefr5vwd" path="res://UI/windows/preferences/float_option.tscn" id="2_8ltnj"]

[node name="Project Settings" type="VBoxContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 0
script = ExtResource("1_arwtu")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Graph Settings" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Space3" type="Control" parent="ScrollContainer/Graph Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/Graph Settings"]
layout_mode = 2
text = "Canvas Resolution :"

[node name="CanvasRes" type="HBoxContainer" parent="ScrollContainer/Graph Settings"]
layout_mode = 2

[node name="Label1" type="Label" parent="ScrollContainer/Graph Settings/CanvasRes"]
layout_mode = 2
mouse_filter = 1
text = "X : "

[node name="CanvasX" parent="ScrollContainer/Graph Settings/CanvasRes" instance=ExtResource("2_8ltnj")]
unique_name_in_owner = true
layout_mode = 2
text = "1280"
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
select_all_on_focus = false
script = ExtResource("2_8a3vq")
value = 1920.0
min_value = 2.0
max_value = 10000.0
step = 1.0

[node name="Space" type="Control" parent="ScrollContainer/Graph Settings/CanvasRes"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/Graph Settings/CanvasRes"]
layout_mode = 2
mouse_filter = 1
text = "Y : "

[node name="CanvasY" parent="ScrollContainer/Graph Settings/CanvasRes" instance=ExtResource("2_8ltnj")]
unique_name_in_owner = true
layout_mode = 2
text = "720"
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
select_all_on_focus = false
script = ExtResource("2_8a3vq")
value = 1080.0
min_value = 2.0
max_value = 10000.0
step = 1.0

[node name="Space4" type="Control" parent="ScrollContainer/Graph Settings"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/Graph Settings"]
layout_mode = 2
text = "Anti Aliasing :"

[node name="CanvasRes2" type="HBoxContainer" parent="ScrollContainer/Graph Settings"]
layout_mode = 2

[node name="AntiAliasing" type="OptionButton" parent="ScrollContainer/Graph Settings/CanvasRes2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Disabled (Fastest)"
popup/item_0/id = 0
popup/item_1/text = "2x (Average)"
popup/item_1/id = 1
popup/item_2/text = "4x (Slow)"
popup/item_2/id = 2
popup/item_3/text = "8x (Slowest)"
popup/item_3/id = 3

[connection signal="focus_entered" from="ScrollContainer/Graph Settings/CanvasRes/CanvasX" to="ScrollContainer/Graph Settings/CanvasRes/CanvasX" method="_on_FloatEdit_focus_entered" flags=18]
[connection signal="focus_exited" from="ScrollContainer/Graph Settings/CanvasRes/CanvasX" to="ScrollContainer/Graph Settings/CanvasRes/CanvasX" method="_on_LineEdit_focus_exited" flags=18]
[connection signal="text_changed" from="ScrollContainer/Graph Settings/CanvasRes/CanvasX" to="ScrollContainer/Graph Settings/CanvasRes/CanvasX" method="_on_LineEdit_text_changed" flags=18]
[connection signal="focus_entered" from="ScrollContainer/Graph Settings/CanvasRes/CanvasY" to="ScrollContainer/Graph Settings/CanvasRes/CanvasY" method="_on_FloatEdit_focus_entered" flags=18]
[connection signal="focus_exited" from="ScrollContainer/Graph Settings/CanvasRes/CanvasY" to="ScrollContainer/Graph Settings/CanvasRes/CanvasY" method="_on_LineEdit_focus_exited" flags=18]
[connection signal="text_changed" from="ScrollContainer/Graph Settings/CanvasRes/CanvasY" to="ScrollContainer/Graph Settings/CanvasRes/CanvasY" method="_on_LineEdit_text_changed" flags=18]
